# ctem-ingester

./: .gitignore  Proposed_model_schema.json  SRS.md  queries.sql  single_office_owner.sql
.serena/: project.yml
.serena/memories/: canonical_data_model.md  configuration.md  nmap_transformer.md  project_overview.md  storage_interface.md  storage_layer.md  testing_strategy.md  transformer_interface.md
ingestion/: .coverage  .dockerignore  CHANGELOG.md  README.md  ingest.py  pyproject.toml  requirements.txt
ingestion/docker/: Dockerfile  docker-compose.override.yml
ingestion/src/models/: canonical.py  storage.py
ingestion/src/storage/: connection.py  database.py  repository.py
ingestion/src/transformers/: base.py  nmap_transformer.py  nuclei_transformer.py  registry.py
ingestion/src/utils/: health.py  http_server.py  id_generation.py  metrics.py  security.py
ingestion/tests/fixtures/: expected_canonical.json  expected_nuclei_canonical.json  nmap_sample.xml  nuclei_sample.json
ingestion/tests/integration/: test_api.py  test_nuclei_storage.py  test_storage_duckdb.py
ingestion/tests/performance/: test_batch_ingest.py
ingestion/tests/unit/: test_id_generation.py  test_models.py  test_nmap_transformer.py  test_nuclei_transformer.py  test_xml_security.py
