[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exposure-ingestion"
version = "1.0.0"
description = "Exposure/Finding Canonicalization + Ingestion Module"
authors = [{name = "CTEM Team"}]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.35",
    "duckdb>=1.1.3",
    "duckdb-engine>=0.13.2",
    "defusedxml>=0.7.1",
    "lxml>=5.3.0",
    "watchdog>=6.0.0",
    "uuid-utils>=0.9.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "faker>=30.8.2",
    "psycopg2-binary>=2.9.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
